Add Restricted trait with restricted_to_group method
- needed auri.rs for constructing proper redirects
- add xget_group_by_groupname
- user_in_group now takes just ids (obviating the need for expect)
- add required_unique
- add Session to ARequest
- look up "preview" group at startup time; relying on ids never being
  re-used in the database (with the current schema that's assured)
- make "/preview" restricted_to_group "preview"
- add now_unixtime function to subsume multiline unixtime retrieval
- make dialog_box into popup_box, add PopupBoxKind,
  add toplevel show_popup_box_page and show_login_form intermediate
  functions
- finally impl Restricted for Arc<dyn Handler>

--- a/data/static/main.css
+++ b/data/static/main.css
@@ -234,6 +234,14 @@ hr {
     padding: 2px;
 }
 
+.error_box {
+    background: #ee8181;
+    border: 1px;
+    border-block: black;
+    margin: 50px;
+    padding: 2px;
+}
+
 .dialog_box_title {
     background: black;
     color: white;
