--- a/data/static/main.css
+++ b/data/static/main.css
@@ -123,6 +123,43 @@ a {
     padding-left: 5px;
 }
 
+
+.langs {
+    border-bottom: 0;
+    display: block;
+    list-style: none;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-right: 0px;
+    margin-left: 0px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    padding-right: 0px;
+    padding-left: 0px;
+}
+.langs li {
+    border: 0;
+    display: inline-block;
+    /* height: 48px; */
+    /* line-height: 48px; */
+    position: relative;
+
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-right: 0px;
+    margin-left: 0px;
+
+    padding-top: 5px;
+    padding-bottom: 5px;
+    /* todo: more spacing but keep symmetrical */
+    padding-right: 0em;
+    padding-left: 0em;
+}
+.langs li:not(:first-child)::before {
+  content: "|";
+}
+
+
 .breadcrumb {
     border-bottom: 0;
     display: block;
@@ -261,6 +298,16 @@ hr {
 .dialog_box_body form {
     padding: 0px;
     margin: 0px;
+}
+
+.navrow {
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 15px;
+    padding-bottom: 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .buttonrow {
