css: language switcher: increase spacing between items

--- a/data/static/main.css
+++ b/data/static/main.css
@@ -153,10 +153,12 @@ a {
     padding-bottom: 5px;
     /* todo: more spacing but keep symmetrical */
     padding-right: 0em;
-    padding-left: 0em;
+    padding-left: 3px;
 }
 .langs li:not(:first-child)::before {
-  content: "|";
+    content: "|";
+    position: relative;
+    margin-right: 3px;
 }
 
 
